# ReQISC

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  Makefile  NOTICE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  netlify.toml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: benchmark_request.yml  bug_report.yml  documentation.yml  feature_request.yml  research_task.yml
.github/workflows/: ci.yml  docs.yml  lint.yml  release-dry-run.yml
benchmarks/: README.md  benchmark_manifest.example.yml
benchmarks/circuits/: README.md
benchmarks/hardware_profiles/: generic_coupling.example.yml  xx_coupling.example.yml  xy_coupling.example.yml
docs/: README-link-targets.txt  architecture.md  benchmark-methodology.md  calibration-model.md  compiler-pipeline.md  contributor-onboarding.md  gate-mirroring.md  hardware-profiles.md  index.md  license-policy.md  maintainer-guide.md  netlify-open-source-details.md  project-overview.md  su4-representations.md  terminology.md
examples/: README.md  benchmark_stub.py  compiler_pipeline_demo.py  gate_mirroring_demo.py  minimal_hardware_profile.py  su4_gate_record.py
src/invaris_reqisc/: __init__.py  constants.py  types.py
tests/: test_benchmark_metrics.py  test_compiler_pipeline.py  test_gate_mirroring.py  test_hardware_profile.py  test_import.py  test_weyl_coordinates.py
website/: README.md  _redirects  netlify.toml
website/public/: README.md  docs.html  index.html
(+25 files in other folders)
