[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invaris-quantum-reqisc"
version = "0.1.0"
description = "Research-software workbench for reconfigurable quantum instruction-set components."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Invaris Quantum Maintainers" }]
keywords = [
  "quantum-computing",
  "compiler-infrastructure",
  "scientific-software",
  "benchmarking",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.5",
  "mypy>=1.8",
  "build>=1.0",
]
yaml = ["PyYAML>=6.0"]

[project.urls]
Homepage = "https://github.com/OWNER/invaris-quantum-reqisc"
Documentation = "https://OWNER.github.io/invaris-quantum-reqisc"
Issues = "https://github.com/OWNER/invaris-quantum-reqisc/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"
packages = ["invaris_reqisc"]
